# CirnoBot

./: .gitignore  Dockerfile  README.md  bot.py  bot_config.yaml  cirno_util.py  plugin_config.json  pyproject.toml  requirements.txt
data/: .gitignore
src/plugins/: .gitignore
src/plugins/nonebot_plugin_archive/: __init__.py  config.py  config.yaml  data_source.py  entries_picture.py
src/plugins/nonebot_plugin_currency_conversion/: __init__.py  config.py  config.yaml
src/plugins/nonebot_plugin_cute_message/: __init__.py  config.py
src/plugins/nonebot_plugin_database_connector/: __init__.py
src/plugins/nonebot_plugin_haruka_bot/: version.py
src/plugins/nonebot_plugin_help/: .gitignore  __init__.py  config.py  config.yaml  generate_help_image.py
src/plugins/nonebot_plugin_image_server/: __init__.py  app.py  config.yaml
src/plugins/nonebot_plugin_kaiheila_check/: __init__.py  config.py  config.yaml  data_source.py
src/plugins/nonebot_plugin_mc_cocdicer/: __init__.py  cards.py  dices.py  investigator.py  messages.py  san_check.py
src/plugins/nonebot_plugin_mc_fun/: __init__.py  commands.py  config.py  data_source.py  listeners.py  message_image_generater.py  util.py
src/plugins/nonebot_plugin_mc_info/: __init__.py  config.py  config.yaml  connect.py  datasource.py
src/plugins/nonebot_plugin_message_recorder/: __init__.py  config.py  config.yaml  data_source.py
src/plugins/nonebot_plugin_permission/: __init__.py  config.yaml  data_source.py
