[tool.poetry]
name = "cirno_bot"
version = "0.1.0"
description = "cirno_bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_test", "nonebot_plugin_gocqhttp", "haruka_bot", "nonebot_plugin_gamedraw", "nonebot_plugin_what2eat", "nonebot_plugin_tarot", "nonebot_plugin_analysis_bilibili"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
