[tool.poetry]
name = "cirno_bot"
version = "0.1.0"
description = "cirno_bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
nonebot2 = "^2.0.0-beta.1"
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp", "haruka_bot"]
plugin_dirs = ["src/plugins"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议"}]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
